# kquickcharts

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .install_ecm.sh  .kde-ci.yml  CMakeLists.txt  COPYING  KF5QuickChartsConfig.cmake.in  KF6QuickChartsConfig.cmake.in  LICENSE  README.md  metainfo.yaml
autotests/: ArraySourceTest.cpp  CMakeLists.txt  HistoryProxySourceTest.cpp  ItemBuilderTest.cpp  MapProxySourceTest.cpp  qmltest.cpp  tst_BarChart.qml  tst_LineChart.qml  tst_PieChart.qml
controls/: AxisLabels.cpp  AxisLabels.h  CMakeLists.txt  ChartsControlsPlugin.cpp  ChartsControlsPlugin.h  GridLines.h  KirigamiTheme.qml  Legend.qml  LegendDelegate.qml  LegendLayout.cpp  LegendLayout.h  LegendModel.cpp  LegendModel.h  LineChartControl.qml  PieChartControl.qml  Theme.qml  qmldir  quickchartscontrols.qdoc  quickchartscontrols.qdocconf
controls/styles/org.kde.desktop/: Theme.qml
docs/: Doxyfile.local
examples/charts/: BarChart.qml  CMakeLists.txt  ContinuousLineChart.qml  HistoryProxySource.qml  Legend.qml  LineChart.qml  Main.qml  PieChart.qml  Plotter.qml  RangeEditor.qml  StackedPieChart.qml  charts.qrc  main.cpp  main.qml
examples/snippets/: barchart.qml  linechart.qml  minimal.qml  piechart.qml
scripts/: validate_shaders.sh
src/: ArraySource.cpp  ArraySource.h  Axis.cpp  Axis.h  AxisLabels.cpp  BarChart.cpp  BarChart.h  CMakeLists.txt  Chart.cpp  Chart.h  ChartDataSource.cpp  ChartDataSource.h  ChartPoint.cpp  ChartPoint.h  ChartsPlugin.cpp  ChartsPlugin.h  DataSource.cpp  DataSource.h  GridLines.cpp  GridLines.h  ItemBuilder.cpp  ItemBuilder.h  LegendModel.cpp  LineChart.cpp  LineChart.h  Math.h  ModelRole.cpp  ModelRole.h  ModelSource.cpp  ModelSource.h  PieChart.cpp  PieChart.h  PieChartMaterial.cpp  PieChartMaterial_p.h  PieChartNode.cpp  PieChartNode_p.h  QmlDeprecated.h  RangeGroup.cpp  RangeGroup.h  SingleValueSource.cpp  (+8 more)
src/datasource/: ArraySource.cpp  ArraySource.h  ChartAxisSource.cpp  ChartAxisSource.h  ChartDataSource.cpp  ChartDataSource.h  ColorGradientSource.cpp  ColorGradientSource.h  HistoryProxySource.cpp  HistoryProxySource.h  MapProxySource.cpp  MapProxySource.h  ModelHistorySource.cpp  ModelHistorySource.h  ModelSource.cpp  ModelSource.h  SingleValueSource.cpp  SingleValueSource.h  ValueHistorySource.cpp  ValueHistorySource.h
src/decorations/: AxisLabels.cpp  AxisLabels.h  GridLines.cpp  GridLines.h  Legend.cpp  Legend.h  LegendLayout.cpp  LegendLayout.h  LegendModel.cpp  LegendModel.h
src/scenegraph/: BarChartMaterial.cpp  BarChartMaterial.h  BarChartNode.cpp  BarChartNode.h  LineChartMaterial.cpp  LineChartMaterial.h  LineChartNode.cpp  LineChartNode.h  LineGridNode.cpp  LineGridNode.h  LineSegmentNode.cpp  LineSegmentNode.h  PieChartMaterial.cpp  PieChartMaterial.h  PieChartMaterial_p.h  PieChartNode.cpp  PieChartNode.h  PieChartNode_p.h  SDFShader.cpp  SDFShader.h
src/shaders/: CMakeLists.txt  barchart.frag  barchart.vert  desktop_header.glsl  desktop_header_core.glsl  es_header.glsl  header_desktop.glsl  header_desktop_core.glsl  header_es2.glsl  header_es3.glsl  linechart.frag  linechart.vert  linechart_core.frag  linechart_core.vert  piechart.frag  piechart.vert  piechart_core.frag  piechart_core.vert  sdf.frag  sdf.glsl  sdf_core.frag  shaders.qrc  uv.vert
src/shaders6/: CMakeLists.txt  linechart.frag  linechart.vert  piechart.vert  sdf.glsl
